syntax = "proto3";
option go_package = ".;pb";

// 股票基础信息（静态/半静态）
message DBStockBasicInfo {
  string Id = 1;                   //@go_tags(`gorm:"id;primaryKey;autoIncrement" json:"id"`) 股票代码
  string Market = 2;               //@go_tags(`gorm:"market;uniqueIndex:uk_market_symbol" json:"market"`) 市场标识(sh/sz)
  string Exchange = 3;             //@go_tags(`gorm:"exchange" json:"exchange"`) 交易所(SSE/SZSE)
  string Name = 4;                 //@go_tags(`gorm:"name" json:"name"`) 公司简称
  string FullName = 5;             //@go_tags(`gorm:"full_name" json:"full_name"`) 公司全称
  string Industry = 7;             //@go_tags(`gorm:"industry" json:"industry"`) 行业
  string Sector = 8;               //@go_tags(`gorm:"sector" json:"sector"`) 板块 
  string Area = 10;                //@go_tags(`gorm:"area" json:"area"`) 地区
  string Currency = 11;            //@go_tags(`gorm:"currency" json:"currency"`) 币种
  string ListDate = 12;            //@go_tags(`gorm:"list_date" json:"list_date"`) 上市日期(YYYYMMDD)
}

// 基本面快照（按期/按时间）
message DBStockOperatingSnapshot {
  string Id = 1;                   //@go_tags(`gorm:"id;primaryKey;autoIncrement" json:"id"`) 主键ID
  string Symbol = 2;               //@go_tags(`gorm:"symbol;index" json:"symbol"`) 股票代码
  string Market = 3;               //@go_tags(`gorm:"market" json:"market"`) 市场标识
  string Ts = 4;                   //@go_tags(`gorm:"ts" json:"ts"`) 时间戳(RFC3339)
  string Period = 5;               //@go_tags(`gorm:"period" json:"period"`) 周期（如 FY/Q）
  string FiscalYear = 6;           //@go_tags(`gorm:"fiscal_year" json:"fiscal_year"`) 财年
  string FiscalQuarter = 7;        //@go_tags(`gorm:"fiscal_quarter" json:"fiscal_quarter"`) 财季
  string Source = 8;               //@go_tags(`gorm:"source" json:"source"`) 数据来源

  double Revenue = 20;             //@go_tags(`gorm:"revenue" json:"revenue"`) 营业收入
  double OperatingIncome = 21;     //@go_tags(`gorm:"operating_income" json:"operating_income"`) 营业利润
  double NetProfit = 22;           //@go_tags(`gorm:"net_profit" json:"net_profit"`) 净利润
  double EPS = 23;                 //@go_tags(`gorm:"eps" json:"eps"`) 每股收益
  double ROE = 24;                 //@go_tags(`gorm:"roe" json:"roe"`) 净资产收益率
  double ROA = 25;                 //@go_tags(`gorm:"roa" json:"roa"`) 总资产收益率
  double GrossMargin = 26;         //@go_tags(`gorm:"gross_margin" json:"gross_margin"`) 毛利率
  double OperatingMargin = 27;     //@go_tags(`gorm:"operating_margin" json:"operating_margin"`) 营业利润率
  double NetMargin = 28;           //@go_tags(`gorm:"net_margin" json:"net_margin"`) 净利率
  double PE = 29;                  //@go_tags(`gorm:"pe" json:"pe"`) 市盈率
  double PB = 30;                  //@go_tags(`gorm:"pb" json:"pb"`) 市净率
  double PS = 31;                  //@go_tags(`gorm:"ps" json:"ps"`) 市销率
  double DividendPerShare = 32;    //@go_tags(`gorm:"dividend_per_share" json:"dividend_per_share"`) 每股分红
  double DividendYield = 33;       //@go_tags(`gorm:"dividend_yield" json:"dividend_yield"`) 股息率
  double FreeCashFlow = 34;        //@go_tags(`gorm:"free_cash_flow" json:"free_cash_flow"`) 自由现金流
  double DebtToEquity = 35;        //@go_tags(`gorm:"debt_to_equity" json:"debt_to_equity"`) 资产负债比
  double CurrentRatio = 36;        //@go_tags(`gorm:"current_ratio" json:"current_ratio"`) 流动比率
  double QuickRatio = 37;          //@go_tags(`gorm:"quick_ratio" json:"quick_ratio"`) 速动比率
  double TotalAssets = 38;         //@go_tags(`gorm:"total_assets" json:"total_assets"`) 总资产
  double TotalLiabilities = 39;    //@go_tags(`gorm:"total_liabilities" json:"total_liabilities"`) 总负债
  double Equity = 40;              //@go_tags(`gorm:"equity" json:"equity"`) 股东权益
  double RevenueYoY = 41;          //@go_tags(`gorm:"revenue_yoy" json:"revenue_yoy"`) 收入同比
  double NetProfitYoY = 42;        //@go_tags(`gorm:"net_profit_yoy" json:"net_profit_yoy"`) 净利润同比
  double EPSYoY = 43;              //@go_tags(`gorm:"eps_yoy" json:"eps_yoy"`) EPS 同比
  string CreateAt = 61;             //@go_tags(`gorm:"create_at" json:"create_at"`) 创建时间
}


message DBStockRealTimeItem {
    string	Code               = 1; //@go_tags(`gorm:"code" json:"code"`) 股票代码
    string	Name               = 2; //@go_tags(`gorm:"name" json:"name"`) 股票名称
    double	LastPrice            = 3; //@go_tags(`gorm:"last_price" json:"last_price"`) 最新价
    double	ChangePct            = 4; //@go_tags(`gorm:"change_pct" json:"change_pct"`) 涨跌幅
    double	ChangeAmt            = 5; //@go_tags(`gorm:"change_amt" json:"change_amt"`) 涨跌额
    double	Volume               = 6; //@go_tags(`gorm:"volume" json:"volume"`) 成交量
    double	Amount               = 7; //@go_tags(`gorm:"amount" json:"amount"`) 成交额
    double	Amplitude            = 8; //@go_tags(`gorm:"amplitude" json:"amplitude"`) 振幅
    double	High                 = 9; //@go_tags(`gorm:"high" json:"high"`) 最高
    double	Low                  = 10; //@go_tags(`gorm:"low" json:"low"`) 最低
    double	Open                 = 11; //@go_tags(`gorm:"open" json:"open"`) 今开
    double	PrevClose            = 12; //@go_tags(`gorm:"prev_close" json:"prev_close"`) 昨收
    double	VolumeRatio          = 13; //@go_tags(`gorm:"volume_ratio" json:"volume_ratio"`) 量比
    double	TurnoverRate         = 14; //@go_tags(`gorm:"turnover_rate" json:"turnover_rate"`) 换手率
    double	PeDynamic            = 15; //@go_tags(`gorm:"pe_dynamic" json:"pe_dynamic"`) 市盈率-动态
    double	PbRatio              = 16; //@go_tags(`gorm:"pb_ratio" json:"pb_ratio"`) 市净率
    double	TotalMarketCap       = 17; //@go_tags(`gorm:"total_market_cap" json:"total_market_cap"`) 总市值
    double	CirculatingMarketCap = 18; //@go_tags(`gorm:"circulating_market_cap" json:"circulating_market_cap"`) 流通市值
    double	PriceSpeed           = 19; //@go_tags(`gorm:"price_speed" json:"price_speed"`) 涨速
    double	FiveMinChange        = 20; //@go_tags(`gorm:"five_min_change" json:"five_min_change"`) 5分钟涨跌
    double	SixtyDayChangePct    = 21; //@go_tags(`gorm:"sixty_day_change_pct" json:"sixty_day_change_pct"`) 60日涨跌幅
    double	YtdChangePct         = 22; //@go_tags(`gorm:"ytd_change_pct" json:"ytd_change_pct"`) 年初至今涨跌幅
}



// 日/周/月K线（行情）
message DBStockBar {
  string Id = 1;                   //@go_tags(`gorm:"id;primaryKey;autoIncrement" json:"id"`) 主键ID
  string Symbol = 2;               //@go_tags(`gorm:"symbol;uniqueIndex:uk_symbol_tf_ts" json:"symbol"`) 股票代码
  string Market = 3;               //@go_tags(`gorm:"market;uniqueIndex:uk_symbol_tf_ts" json:"market"`) 市场标识
  string Timeframe = 4;            //@go_tags(`gorm:"timeframe;uniqueIndex:uk_symbol_tf_ts" json:"timeframe"`) 周期(1d/1w/1mo)
  string Ts = 5;                   //@go_tags(`gorm:"ts;uniqueIndex:uk_symbol_tf_ts" json:"ts"`) 时间戳(RFC3339)
  double Open = 6;                 //@go_tags(`gorm:"open" json:"open"`) 开盘价
  double High = 7;                 //@go_tags(`gorm:"high" json:"high"`) 最高价
  double Low = 8;                  //@go_tags(`gorm:"low" json:"low"`) 最低价
  double Close = 9;                //@go_tags(`gorm:"close" json:"close"`) 收盘价
  int64 Volume = 10;               //@go_tags(`gorm:"volume" json:"volume"`) 成交量(股)
  double Turnover = 11;            //@go_tags(`gorm:"turnover" json:"turnover"`) 成交额(货币)
  double AdjFactor = 12;           //@go_tags(`gorm:"adj_factor" json:"adj_factor"`) 复权因子
  string Source = 13;              //@go_tags(`gorm:"source" json:"source"`) 数据来源(akshare等)
  string CreateAt = 14;            //@go_tags(`gorm:"create_at" json:"create_at"`) 创建时间
  string UpdateAt = 15;            //@go_tags(`gorm:"update_at" json:"update_at"`) 更新时间
}



// 股票新闻
message DBStockNews {
  string Id = 1;                   //@go_tags(`gorm:"id;primaryKey;autoIncrement" json:"id"`) 主键ID
  string Symbol = 2;               //@go_tags(`gorm:"symbol;uniqueIndex:uk_symbol_ts" json:"symbol"`) 股票代码
  string Market = 3;               //@go_tags(`gorm:"market;uniqueIndex:uk_symbol_ts" json:"market"`) 市场标识
  string Ts = 4;                   //@go_tags(`gorm:"ts;uniqueIndex:uk_symbol_ts" json:"ts"`) 时间戳(RFC3339)
  string Title = 5;                //@go_tags(`gorm:"title" json:"title"`) 新闻标题
  string Source = 6;               //@go_tags(`gorm:"source" json:"source"`) 数据来源
  string Url = 7;                  //@go_tags(`gorm:"url" json:"url"`) 新闻链接
  string CreateAt = 8;             //@go_tags(`gorm:"create_at" json:"create_at"`) 创建时间(RFC3339)
}

//股票分析报告 每日
message DBStockReport {
  string Id = 1;                   //@go_tags(`gorm:"id;primaryKey;autoIncrement" json:"id"`) 主键ID
  string Symbol = 2;               //@go_tags(`gorm:"symbol;uniqueIndex:uk_symbol_ts" json:"symbol"`) 股票代码
  string Market = 3;               //@go_tags(`gorm:"market;uniqueIndex:uk_symbol_ts" json:"market"`) 市场标识
  string Ts = 4;                   //@go_tags(`gorm:"ts;uniqueIndex:uk_symbol_ts" json:"ts"`) 时间戳(RFC3339)
  string Source = 5;               //@go_tags(`gorm:"source" json:"source"`) 数据来源
  string CreateAt = 6;             //@go_tags(`gorm:"create_at" json:"create_at"`) 创建时间
}
